refactor: clean up some things the IDE complains about
I don't know what plugin is doing it but whatever.